Fixes bug where chart-settings menu dragged to the bottom would create vertical overflow and extent the scrollbar

--- a/src/features/datavisualizer/VisualizationStep.css
+++ b/src/features/datavisualizer/VisualizationStep.css
@@ -239,7 +239,6 @@ input[type=range]::-moz-range-thumb {
 
 .main-visualization .expandable-side-menu-content,
 .main-visualization .draggable-menu-content {
-    height: 100%;
     overflow: hidden;
 }
 
